Fix text overflow by .brick css style: height.

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -129,7 +129,7 @@ header {
 }
 
 .brick {
-    height: 200px;
+    min-height: 200px;
 }
 
 .sponsor_brick {
